tests/A1/tests/accept/simple.ul
int foo(){


    return 'c';

}


void main(){
    println foo();
    
}

