tests/A1/tests/reject/rejectIdentifier.ul
void foo(){
    int 2x;
}